# OpenCL_hw1

./: CMakeLists.txt  cl.hpp  convolution.cl  input.txt  main.cpp  prefix_sum.cl
